--- a/panthera/package.json
+++ b/panthera/package.json
@@ -17,7 +17,10 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.12.0",
+    "@types/react": "19.0.8",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
